components/shared/terminal/tests/snapshots/snapshot_tests__stdout_after_simple_task_ok_interactive.snap
---
source: src/terminal/tests/snapshot_tests.rs
expression: sanitized_output(&term)
---
✔  Simple Task (Finished cleanly) [TIME]
>>> [STDOUT] Plain text after simple task OK
