components/shared/terminal/tests/snapshots/snapshot_tests__stdout_after_step_fail_interactive.snap
---
source: src/terminal/tests/snapshot_tests.rs
expression: sanitized_output(&term)
---
✖  Failing Step (fail) [TIME]
│
│ issue:    Fatal
>>> [STDOUT] Should be below the error report
