components/shared/terminal/tests/snapshots/snapshot_tests__stdout_after_step_fail_plain.snap
---
source: src/terminal/tests/snapshot_tests.rs
expression: sanitized_output(&term)
---
[WAIT] Failing Step
[START] Failing Step
[FAIL] Failing Step (fail) [TIME]
│
│ issue:    Fatal
>>> [STDOUT] Should be below the error report
