components/shared/terminal/tests/snapshots/snapshot_tests__step_fail_without_run_plain.snap
---
source: src/terminal/tests/snapshot_tests.rs
expression: sanitized_output(&term)
---
[WAIT] Instant Fail
[FAIL] Instant Fail (fail) [TIME]
│
│ issue:    Config not found
