components/shared/terminal/tests/snapshots/snapshot_tests__step_happy_path_with_run_plain.snap
---
source: src/terminal/tests/snapshot_tests.rs
expression: sanitized_output(&term)
---
[WAIT] Compile Core
[START] Compile Core (linking objects)
[SUCCESS] Compile Core (compiled in 0.5s) [TIME]
