components/shared/terminal/tests/snapshots/snapshot_tests__step_immediate_ok_without_run_plain.snap
---
source: src/terminal/tests/snapshot_tests.rs
expression: sanitized_output(&term)
---
[WAIT] Check Cache
[SUCCESS] Check Cache (cache hit) [TIME]
