components/shared/terminal/tests/snapshots/snapshot_tests__step_skip_behavior_interactive.snap
---
source: src/terminal/tests/snapshot_tests.rs
expression: sanitized_output(&term)
---
↷  Optional Check (not required for this build)
