components/shared/terminal/tests/snapshots/snapshot_tests__step_skip_behavior_plain.snap
---
source: src/terminal/tests/snapshot_tests.rs
expression: sanitized_output(&term)
---
[WAIT] Optional Check
[START] Optional Check
[SKIP] Optional Check (not required for this build)
