components/shared/terminal/tests/snapshots/snapshot_tests__three_stage_task_all_ok_interactive.snap
---
source: src/terminal/tests/snapshot_tests.rs
expression: sanitized_output(&term)
---
✔  Multi Stage (success) [TIME]
